deployments/sharry/postgres.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: sharry
spec:
  serviceName: "postgres"
  selector:
    matchLabels:
      app: postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
    spec:
      securityContext:
        runAsUser: 2017 # Maps to the "sharry" user on the nas
      containers:
        - name: postgres
          image: postgres:18.4
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql
              name: postgres-volume
      volumes:
        - name: postgres-volume
          persistentVolumeClaim:
            claimName: postgres-pv-claim
        - name: postgres-config-volume
          configMap:
            name: postgres-config-file
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: sharry
  labels:
    app: postgres
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      name: http
      port: 5432
      targetPort: 5432
