deployments/sharry/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sharry-service
  namespace: sharry
spec:
  type: ClusterIP
  selector:
    app: sharry
  ports:
    - protocol: TCP
      port: 8085
      targetPort: 9090
